--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -67,16 +67,17 @@
             </div>
         </div>
         <div class="col-lg-8 ">
-            <div class="card border-secondary g-chat" style="height:749px;">
+            <!-- <div class="card border-secondary g-chat" style="height:749px;">
                 <div class="card-header h3 text-muted text-center" style="font-size: 22px;">General Chat</div>
                 <div class="card-body" style="min-height: 500px;background-color: white;">
                     <app-messages [messages]="service.messages"></app-messages>
                 </div>
                 <div class="card-footer">
-                    <app-chat-input-general (contentemitter)="sendMessage($event)"></app-chat-input-general>
-                    <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input> -->
+                    <app-chat-input-general (contentemitter)="sendMessage($event)"></app-chat-input-general> -->
+                    <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
                 </div>
-            </div>
+            </div> -->
+            <app-story></app-story>
         </div>
 
         <div class="col-lg-2 ">
@@ -121,7 +122,7 @@
 
             <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 pt-2 pb-2"
                 style="border-radius:5px 5px 5px 5px" (click)="onSaveButtonClick()">Selected Users</button>
-            <app-story></app-story>
+            <!-- <app-story></app-story> -->
         </div>
     </div>
 </div>
@@ -270,7 +271,9 @@
             </div>
         </mat-tab>
         <mat-tab label="Stories">
+            <div class="section3">
             <app-story></app-story>
+            </div>
         </mat-tab>
     </mat-tab-group>
 </div>
