--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -17,15 +17,15 @@
   <!-- after login header -->
   <div class="container-fluid d-flex" *ngIf="service.myName">
     <div class="col-2 col-sm-4 col-md-5">
-      <div *ngIf="!isChatRoute && extractedWord !== 'chat'">
-        <button class="btn btn-warning btn-sm" type="button" [routerLink]="['/chat']"><i class="bi bi-arrow-left"></i>
-          <span class="d-none d-sm-inline-flex"> &nbsp; Back to Chat</span>
+      <div *ngIf="service.isButtonVisisble">
+        <button class=" ms-1 btn btn-warning btn-sm" type="button" [routerLink]="['/chat']"><i class="bi bi-house-door-fill"></i>
+          <span class="ms-1 d-none d-sm-inline-flex">Home</span>
         </button>
       </div>
     </div>
     <div class="col-8 col-sm-7 col-md-7 d-flex justify-content-between header">
       <div>
-        <span class="navbar-brand mb-0 h1" style="font-size: 28px;">Chat Application</span>
+        <span class="navbar-brand mb-0 h1 maintitle" >Chat Application</span>
       </div>
 
       <div class="dropdown mb-0 d-flex">
