--- a/AKchatApp/src/app/story-upload/story-upload.component.css
+++ b/AKchatApp/src/app/story-upload/story-upload.component.css
@@ -27,3 +27,92 @@
 
 
 }
+.image-preview {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .remove-icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  .slide {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+  }
+/*   
+  .rightArrow {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    right: 32px;
+    font-size: 45px;
+    color: #fff;
+    z-index: 1;
+    cursor: pointer;
+  } */
+  .rightArrow {
+    width: 36px;
+    height: 36px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgb(25, 135, 84);
+    /* background-color: #333; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 21px;
+    color: #fff;
+    right: 21px;
+    font-weight: 100;
+    /* top: 194px; */
+    z-index: 1;
+    top: 45%;
+    cursor: pointer;
+  }
+  
+  .leftArrow {
+    width: 36px;
+    height: 36px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgb(25, 135, 84);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 32px;
+    font-size: 21px;
+    font-weight: 100;
+    color: #fff;
+    z-index: 1;
+    cursor: pointer;
+  }
+  
+  .slider {
+    position: relative;
+    height: 59%;
+  }
+  .dotsContainer {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .dot {
+    margin: 0 3px;
+    cursor: pointer;
+    font-size: 20px;
+  }
