--- a/AKchatApp/src/app/story-upload/story-upload.component.html
+++ b/AKchatApp/src/app/story-upload/story-upload.component.html
@@ -1,51 +1,140 @@
-<div class="mainBody">
-    <div class="row d-flex justify-content-center mt-5">
-        <div class="col-10 mt-3" style="background-color: #ededed;height: 500px;">
-            <div class="container d-flex justify-content-center mt-2">
+<div class="mainBody" style="position:relative">
+    <div style="text-align: center;width: 100%;border-bottom: 1px solid #EEE;padding: 8px;">
+        <span class="fw-bolder">Post your story</span>
+    </div>
+    <div class="d-flex flex-column" *ngIf="!isslider"
+        style="width: 60%;position: absolute;margin-top: 45%;margin-left: 22%;">
+        <img style="height: 127px;" src='/assets/img/imagevidelogo.jpg'>
+        <button class="btn btn-success" style="width: 60%; margin-inline: auto;" (click)="selectimage()">Select from
+            Computer</button>
+        <input #fileInput class="image-input" type="file" multiple (change)="detectFiles($event)"
+            style="display: none;">
+    </div>
+    <div class="slider" *ngIf="isslider">
+        <div *ngIf="isbutton">
+            <div (click)="goToPrevious()" id="restartButton" class="leftArrow">
+                <span>❰</span>
+            </div>
+            <div (click)="goToNext()" class="rightArrow">
+                <span>❱</span>
             </div>
 
-            <form [formGroup]="storyForm" (ngSubmit)="onFormSubmit()">
-                <mat-card>
-    
-                    <div class="d-flex justify-content-center mb-5 ">
-                        <div class="user-image d-flex justify-content-center">
-                          
-                              <img #galleryimg class="user-image-o" [src]="previews.length > 0 ? previews[0] : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIo8JvX8GztcxTVf3XPGKaArNJbYMpMKJ3Hg&usqp=CAU'" alt="">
-                            <input  class="image-input" type="file"  multiple (change)="detectFiles($event) ">
-                            
-                          </div>
-                    </div>
-    
-                    <div class="d-flex justify-content-center">
-                        <mat-card-content class="d-flex flex-column half-size">
-                            <label>Caption</label>
-                            <mat-form-field appearance="outline">
-    
-                                <mat-label>Caption</mat-label>
-                                <input matInput formControlName="caption">
-                            </mat-form-field>
-                        </mat-card-content>
-    
-    
-                       
-                    </div>
-    
-                    <mat-card-content class="d-flex justify-content-center">
-                        <button    mat-raised-button color="primary" class="w-50"
-                            type="submit">Save</button>
+        </div>
+        <div style="width: 100%;height: 400px;" class="slide image-preview">
+            <img [src]="getCurrentSlideUrl()" alt="Slide Image" style="width: 100%;height: 400px;">
+            <span class="remove-icon" (click)="removeCurrentImage()">X</span>
+        </div>
+        <div class="dotsContainer">
+            <div *ngFor="let slide of previews; let slideIndex = index" class="dot" (click)="goToSlide(slideIndex)">
+                ●
+            </div>
+        </div>
+    </div>
+    <div *ngIf="isslider">
+        <form [formGroup]="storyForm" (ngSubmit)="onFormSubmit()">
+            <mat-card>
+
+                <div class="d-flex justify-content-center">
+                    <mat-card-content style="width:46%" class="d-flex flex-column half-size">
+                        <label>Caption</label>
+                        <mat-form-field appearance="outline">
+
+                            <mat-label>Caption</mat-label>
+                            <input matInput formControlName="caption">
+                        </mat-form-field>
                     </mat-card-content>
-                    <mat-card-footer></mat-card-footer>
-                </mat-card>
-            </form>
-            
-        </div>
-        <div>
-            <img *ngFor="let preview of previews" [src]="preview" class="rounded mb-3 ms-2" width="100" height="80px">
-        </div>
-        <div>
-            <img style="width:100px ;height:80px" *ngFor="let url of urls" [src]="url" class="rounded mb-3 ms-2" width="180">
-        </div>
+
+
+
+                </div>
+
+                <mat-card-content class="">
+                    <button mat-raised-button color="primary" class="" style="width: 101%;" type="submit">Save</button>
+                </mat-card-content>
+            </mat-card>
+        </form>
     </div>
 
 
-</div>
+
+
+
+
+
+
+    <div>
+        <div class="d-none row d-flex justify-content-center mt-5">
+            <div class="col-10 mt-3 " style="background-color: #ededed;height: 500px;">
+                <div class="container d-flex justify-content-center mt-2">
+                </div>
+
+                <form [formGroup]="storyForm" (ngSubmit)="onFormSubmit()">
+                    <mat-card>
+
+                        <div class="d-flex justify-content-center mb-5 ">
+                            <div class="user-image d-flex justify-content-center">
+
+                                <img #galleryimg class="user-image-o"
+                                    [src]="previews.length > 0 ? previews[0] : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIo8JvX8GztcxTVf3XPGKaArNJbYMpMKJ3Hg&usqp=CAU'"
+                                    alt="">
+
+
+                            </div>
+                        </div>
+
+                        <div class="d-flex justify-content-center">
+                            <mat-card-content class="d-flex flex-column half-size">
+                                <label>Caption</label>
+                                <mat-form-field appearance="outline">
+
+                                    <mat-label>Caption</mat-label>
+                                    <input matInput formControlName="caption">
+                                </mat-form-field>
+                            </mat-card-content>
+
+
+
+                        </div>
+
+                        <mat-card-content class="d-flex justify-content-center">
+                            <button mat-raised-button color="primary" class="w-50" type="submit">Save</button>
+                        </mat-card-content>
+                        <mat-card-footer></mat-card-footer>
+                    </mat-card>
+                </form>
+
+            </div>
+            <!-- <div>
+            <img *ngFor="let preview of previews" [src]="preview" class="rounded mb-3 ms-2" width="100" height="80px">
+        </div> -->
+            <div class="slider">
+                <div>
+                    <div (click)="goToPrevious()" id="restartButton" class="leftArrow" style="color: black;">
+                        <span>❰</span>
+                    </div>
+                    <div (click)="goToNext()" class="rightArrow" style="color: black;">
+                        <span>❱</span>
+                    </div>
+                </div>
+                <!-- <div style="width: 160px; height: 160px;"
+              class="slide"
+              [ngStyle]="{ 'background-image': getCurrentSlideUrl() }"
+            ></div> -->
+                <div style="width: 100%;height: 400px;" class="slide">
+                    <img [src]="getCurrentSlideUrl()" alt="Slide Image" style="width: 100%;height: 400px;">
+                </div>
+                <!-- <div *ngFor="let preview of previews; let i = index">
+              <div class="image-preview">
+                <img [src]="preview" class="rounded mb-3 ms-2" width="100" height="80px">
+                <span class="remove-icon" (click)="removeImage(i)">X</span>
+              </div>
+            </div>
+          </div> -->
+                <div>
+                    <img style="width:100px ;height:80px" *ngFor="let url of urls" [src]="url" class="rounded mb-3 ms-2"
+                        width="180">
+                </div>
+            </div>
+
+
+        </div>
