--- a/AKchatApp/src/app/story/story.component.css
+++ b/AKchatApp/src/app/story/story.component.css
@@ -2,7 +2,8 @@
     border:0px;
     box-shadow: 3px 3px 13px -3px #888888;
     border-radius: 25px;
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 .stitle{
     width: auto; height: 50px;color: white; border-radius: 25px 25px 0px 0px;
@@ -20,7 +21,13 @@
     border: 0px;
     background: transparent;
 }
-
+.nonuserdiv{
+    height: 144px;
+   
+}
+.userdiv{
+    
+}
 .tr{
     display: none;
 }
@@ -31,4 +38,12 @@
   .storytitle{
     font-size: large;
   }
+  }
+  @media screen and (max-width: 1020px) {
+    .horizonbody {
+      display: none !important;
+    }
+    .verticalbody{
+        display: block !important;
+    }
   }
