--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -74,37 +74,10 @@
                 </div>
                 <div class="card-footer">
                     <app-chat-input-general (contentemitter)="sendMessage($event)"></app-chat-input-general> -->
-                    <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
+            <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
                 </div>
             </div> -->
             <app-story></app-story>
-        </div>
-                    <app-chat-input-general (contentemitter)="sendMessage($event)"></app-chat-input-general> -->
-            <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input> -->
-            <!-- </div>
-            </div> -->
-
-
-
-            <!-- <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-            </div> -->
-
-
-
-
-
-
-
-
-
-
-
-
 
             <div class="p-5"
                 style="background-color: rgb(185, 185, 185); width: 65%; position: absolute; height: 78vh; overflow-y: auto; display: flex; flex-wrap: wrap; justify-content: space-between; padding: 10px;">
@@ -128,27 +101,18 @@
 
             </div>
 
-
-
-
-
-
-
-
-
         </div>
-
         <div class="col-lg-2 ">
             <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2 sidechat" [ngClass]="service.defaulttheme">
                 Please Select User You want to Chat
             </div>
             <mat-form-field>
                 <mat-label>Click here to select:</mat-label>
-
+    
                 <mat-select-trigger>
                     <mat-chip-list>
-                        <mat-chip *ngFor="let user of userControl.value" [removable]="true"
-                            (removed)="onCatRemoved(user)" color="accent" selected>
+                        <mat-chip *ngFor="let user of userControl.value" [removable]="true" (removed)="onCatRemoved(user)"
+                            color="accent" selected>
                             {{ user }}
                             <mat-icon matChipRemove>cancel</mat-icon>
                         </mat-chip>
@@ -161,7 +125,7 @@
                             placeholder="Write here name " matInput [formControl]="userctrl"
                             (input)="onSearchInputChange()" />
                     </div>
-
+    
                     <ng-container *ngIf="filteredlist.length > 0; else nouser">
                         <ng-container style="top:200px" *ngFor="let user of filteredlist">
                             <mat-option *ngIf="user!==service.myName" [value]="user">
@@ -173,17 +137,35 @@
                         <div class="p-2">
                             No result for <span class="fw-bolder">"{{userctrl.value}}"</span> found
                         </div>
-
+    
                     </ng-template>
                 </mat-select>
             </mat-form-field>
-
-            <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 pt-2 pb-2"
-                style="border-radius:5px 5px 5px 5px" (click)="onSaveButtonClick()">Selected Users</button>
+    
+            <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 pt-2 pb-2" style="border-radius:5px 5px 5px 5px"
+                (click)="onSaveButtonClick()">Selected Users</button>
             <!-- <app-story></app-story> -->
         </div>
+        <!-- <app-chat-input-general (contentemitter)="sendMessage($event)"></app-chat-input-general> -->
+        <!-- <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input> -->
+        <!-- </div>
+            </div> -->
+
+
+
+        <!-- <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div> -->
+
     </div>
+
+  
 </div>
+
 
 <div class="tabsbody d-none">
     <mat-tab-group>
@@ -331,7 +313,7 @@
         </mat-tab>
         <mat-tab label="Stories">
             <div class="section3">
-            <app-story></app-story>
+                <app-story></app-story>
             </div>
         </mat-tab>
     </mat-tab-group>
