--- a/AKchatApp/src/app/chat/chat-input-general/chat-input-general.component.html
+++ b/AKchatApp/src/app/chat/chat-input-general/chat-input-general.component.html
@@ -1,14 +1,21 @@
-<form #messageForm="ngForm"  autocomplete="off">
-    <div class="row">
-        <div class="col-9">
+<!-- <form #messageForm="ngForm"  autocomplete="off"> -->
+    <div class="d-flex" style="position: absolute;top: 77%;width: 100%;">
+        <div class="mx-3" style="width: 80%;">
             <input  type="text" id="mTexts" [(ngModel)]="content" required name="content"  class="form-control" placeholder="send message">
         </div>
-        <div class="col-3">
-            <div class="d-grid">
-                <button class="btn btn-dark btn-block" type="submit" (click)="sendMessage()">send</button>
-            </div>
+        <div style="width: 20%;">
+                <button style="width:81%" class="btn btn-primary" type="submit" (click)="sendMessage()">Post</button>
         </div>
     </div>
 
-</form> 
+<!-- </form>  -->
 
+<!-- <div class="d-flex" style="position: absolute;top: 77%;width: 100%;">
+    <div class="mx-3" style="width: 80%;">
+        <input style="background-color: aqua;" type="text" id="mTexts" [(ngModel)]="content" required name="content"  class="form-control" placeholder="send message">
+
+    </div>
+    <div style="width: 20%;">
+    <button style="width:81%" class="btn btn-primary" (click)="onFormSubmit()">Post</button>
+    </div>
+</div> -->
