--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -79,8 +79,8 @@
             </div> -->
             <app-story></app-story>
 
-            <div class="p-5"
-                style="background-color: rgb(185, 185, 185); width: 65%; position: absolute; height: 78vh; overflow-y: auto; display: flex; flex-wrap: wrap; justify-content: space-between; padding: 10px;">
+            <div class="d-none mt-4 p-5"
+                style="background-color: rgb(185, 185, 185); width: 65%; position: absolute; height: 55vh; overflow-y: auto; display: flex; flex-wrap: wrap; justify-content: space-between; padding: 10px;">
 
                 <div *ngIf="service.isdivvalid" class="row">
                     <div *ngFor="let user of service.searchfilteredlist" class="col-4 mb-3"
