--- a/AKchatApp/src/app/story-upload/story-upload.component.css
+++ b/AKchatApp/src/app/story-upload/story-upload.component.css
@@ -108,7 +108,11 @@
   }
   .dotsContainer {
     display: flex;
+    position: absolute;
     justify-content: center;
+    bottom: 12px;
+    transform: translateX(-50%);
+    left: 48%
   }
   
   .dot {
@@ -116,3 +120,6 @@
     cursor: pointer;
     font-size: 20px;
   }
+  .dot.active {
+    color: green; /* Color for active dot */
+}
