--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -89,6 +89,7 @@
 
 
 
+    
 
         <div style="display: flex;align-items: center;" class="position-relative" (click)="openNotiDialogue()">
           <i class="bi bi-bell me-2" style="color: white; font-size: 22px;"></i>
@@ -100,9 +101,9 @@
           <button class="btn btn-danger btn-sm me-3 gallery-btn" type="button" [routerLink]="['/gallery']"><i
               class="bi bi-images" style=" font-size: larger;"></i></button>
         </div>
-        <div>
+        <div class="d-flex">
           <img class="user-image me-2" [src]="this.service.imageUrl" alt="">
-          <button class="btn  dropdown-toggle p-0 dbtn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <button style="width:55%" class="btn  dropdown-toggle p-0 dbtn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="navbar-brand ">{{service.myName}}</span>
           </button>
           <ul class="dropdown-menu mt-2" style="background-color: rgba(25,135,84,255);padding: 10px;">
@@ -126,6 +127,7 @@
       </div>
 
       <div class="body togglebody d-none">
+        
         <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
         <label for="openSidebarMenu" class="sidebarIconToggle">
           <div class="spinner diagonal part-1"></div>
@@ -143,7 +145,7 @@
               <span><img class="me-2" style="width:20px;height:20px" src='/assets/img/logo.jpg' alt=""></span>
               <span style="margin-right: 23px;"><a (click)="logout()">LogOut</a></span>
             </div>
-
+          
             <div [ngClass]="service.defaulttheme" class="d-flex justify-content-center p-1">
               <div class="p-1 text-black" [class.defaultgreen]="isGreenActive" [class.bg-white]="!isGreenActive"
                 (click)="toggleDivColors('headergreen')">green</div>
